ubuntu-dev-tools (0.155) UNRELEASED; urgency=medium

  * Fix python3 setup.py clean failing to read unicode from
    debian/changelog.

 -- Dimitri John Ledkov <dimitri.j.ledkov@linux.intel.com>  Sat, 17 Jan 2015 15:40:33 +0000

ubuntu-dev-tools (0.154) experimental; urgency=medium

  [ Logan Rosen ]
  * pbuilder-dist: Fix yes/no for unknown distribution (LP: #1311884).

  [ Yuan-Chen Cheng ]
  * mk-sbuild: better message for cross build so that new start have 
    correct sbuild command from the last message of mk-sbuild.

  [ Niklas Fiekas ]
  * mk-sbuild: support debootstrap keyring and no-check-gpg
    options. (Closes: 754327)

  [ Dimitri John Ledkov ]
  * Port ubuntutools module to python3.

 -- Dimitri John Ledkov <dimitri.j.ledkov@linux.intel.com>  Tue, 23 Dec 2014 16:14:33 +0000

ubuntu-dev-tools (0.153) unstable; urgency=medium

  [ Stefano Rivera ]
  * Acknowledge NMU. Thanks to Paul.
  * Explicitly use xz compression when building source packages, rather than
    relying on dpkg >= 1.16.5 behavior.

  [ Robie Basak ]
  * check-mir: correctly parse dependencies with architecture specifications
    (LP: #1149679).

  [ Benjamin Drung ]
  * pbuilder-dist:
    - Set different aptcache directories for Debian and Ubuntu.
    - Store build logs in <source>_<version>_<arch>.build instead of
      last_operation.log (to avoid overwriting build logs).

 -- Benjamin Drung <bdrung@debian.org>  Tue, 15 Apr 2014 13:17:12 +0200

ubuntu-dev-tools (0.152+nmu1) unstable; urgency=medium

  * Non-maintainer upload.
  * Change debian.tar.gz to debian.tar.xz (Closes: #738413)

 -- Paul Tagliamonte <paultag@debian.org>  Mon, 24 Feb 2014 22:34:22 -0500

ubuntu-dev-tools (0.152) unstable; urgency=medium

  [ Dimitri John Ledkov ]
  * Add ppc64el to valid architectures in pbuilder-dist and ubuntu-build.
  * Simplify mirror detection in mk-sbuild, all supported releases, all
    architectures but i386/amd64 are on ports.ubuntu.com

  [ Benjamin Drung ]